# depgraphdiv

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  depgraphdiv.cabal  doctest-config.json  package.yaml  stack.yaml
app/: Main.hs
benchmark/: bench.hs
doctest/: doctest-discover.hs  doctest-driver.hs
src/Data/Graph/: SIF.hs  Simple.hs  Sort.hs
