name:                depgraphdiv
version:             0.1.0.0
synopsis:            Divide modules into packages according to the dependecy graph
-- description:
homepage:            https://github.com/Hexirp/depgraphdiv#readme
license:             BSD3
license-file:        LICENSE
author:              Hexirp
maintainer:          Hexirp@users.noreply.github.com
copyright:           2017 Hexirp
category:            Tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph.Simple
                       Data.Graph.Sort
  ghc-options:         -W
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable depgraphdiv-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , depgraphdiv
  default-language:    Haskell2010

test-suite depgraphdiv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , depgraphdiv
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite depgraphdiv-doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             doctest-driver.hs
  build-depends:       base
                     , depgraphdiv
                     , QuickCheck
                     , doctest
                     , doctest-driver-gen
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
 
benchmark depgraphdiv-benchmark
  type:             exitcode-stdio-1.0
  main-is:          bench.hs
  ghc-options:      -Wall
  hs-source-dirs:   benchmark
  build-depends:    base, depgraphdiv, criterion, deepseq
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/Hexirp/depgraphdiv
